# SmartCooling

./: .gitignore  CMakeLists.txt  Makefile  README.md
hardware/: CMakeLists.txt
smartcooling-feature-final_pr/: .gitlab-ci.yml  .gitmodules  project.yml
smartcooling-feature-final_pr/cmake_toolchain/: toolchain_config.cmake
smartcooling-feature-final_pr/src/: CMakeLists.txt  user.ld
smartcooling-feature-final_pr/src/headers/: delayForTest.h  dht11_driver.h  disp5110_driver.h  disp5110_wrapper.h  init_periphery.h  utilities.h
smartcooling-feature-final_pr/src/source/: dht11_driver.c  disp5110_driver.c  init_periphery.c  main.c  utilities.c
smartcooling-feature-final_pr/test/: test_disp5110_driver.c
src/headers/: bitmap.h
src/source/: bitmap.c  disp5110_wrapper.c  startup.c
